// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Game/> snapshot test cases <Game/> should render <div className=gameDisplay> parent with <GameEnd/> child component (status=END) 1`] = `
<div
  className="gameDisplay"
>
  <div
    className="gameDisplayCanvasWrapper"
  >
    <div
      className="panel"
    >
      <span>
        Time Left: 
        NaN
      </span>
      <span>
        Score: 
      </span>
    </div>
    <canvas
      height={640}
      width={1280}
    />
    <div
      className="gameOverlay"
    >
      <div
        className="gameEnd"
      >
        <p
          className="gameEndText"
        >
          Игра окончена!
        </p>
        <p
          className="gameEndText"
        >
          Количество набранных очков: 
        </p>
        <div
          className="gameEndButtons"
        >
          <a
            className="linkButton gameEndButton"
            href="/"
            onClick={[Function]}
          >
            На главную
          </a>
          <button
            className="button gameEndButton"
            onClick={[Function]}
          >
            Сыграть еще раз
          </button>
          <a
            className="linkButton gameEndButton"
            href="/leaderboard"
            onClick={[Function]}
          >
            Посмотреть таблицу лидеров
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Game/> snapshot test cases <Game/> should render <div className=gameDisplay> parent with <GameStart/> child component (status=START) 1`] = `
<div
  className="gameDisplay"
>
  <div
    className="gameDisplayCanvasWrapper"
  >
    <div
      className="panel"
    >
      <span>
        Time Left: 
        NaN
      </span>
      <span>
        Score: 
      </span>
    </div>
    <canvas
      height={640}
      width={1280}
    />
    <div
      className="gameOverlay"
    >
      <div
        className="gameStart"
      >
        <p>
          Куда жать, чтобы было весело?!
        </p>
        <img
          alt="Клавиатура"
          draggable={false}
          height={303}
          width={720}
        />
        <button
          className="button gameStartButton"
          onClick={[Function]}
        >
          ПОНЯЛ, ПОГНАЛИ!
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Game/> snapshot test cases <Game/> should render <div className=gameDisplay> parent with child elements (status=IN_PROGRESS) 1`] = `
<div
  className="gameDisplay"
>
  <div
    className="gameDisplayCanvasWrapper"
  >
    <div
      className="panel"
    >
      <span>
        Time Left: 
        NaN
      </span>
      <span>
        Score: 
      </span>
    </div>
    <canvas
      height={640}
      width={1280}
    />
  </div>
</div>
`;
